src/test/Types2/Types2.expected
error: Types2.panda:1:7: functions must have a return type
error: Types2.panda:2:7: tuple types must have at least two elements
2 errors
