src/test/Types2/Types2.panda
var a:(Int)=>()
var b:(String)